============================================================================
User visible changes for btcd
  A full-node bitcoin implementation written in Go
============================================================================

Changes in 0.22.0 (Tue Jun 01 2021)
  - Protocol and network-related changes:
    - Add support for witness tx and block in notfound msg (#1625)
    - Add support for receiving sendaddrv2 messages from a peer (#1670)
    - Fix bug in peer package causing last block height to go backwards
      (#1606)
    - Add chain parameters for connecting to the public Signet network
      (#1692, #1718)
  - Crypto changes:
    - Fix bug causing panic due to bad R and S signature components in
      btcec.RecoverCompact (#1691)
    - Set the name (secp256k1) in the CurveParams of the S256 curve
      (#1565)
  - Notable developer-related package changes:
    - Remove unknown block version warning in the blockchain package,
      due to false positives triggered by AsicBoost (#1463)
    - Add chaincfg.RegisterHDKeyID function to populate HD key ID pairs
      (#1617)
    - Add new method mining.AddWitnessCommitment to add the witness
      commitment as an OP_RETURN output within the coinbase transaction.
      (#1716)
  - RPC changes:
    - Support Batch JSON-RPC in rpcclient and server (#1583)
    - Add rpcclient method to invoke getdescriptorinfo JSON-RPC command
      (#1578)
    - Update the rpcserver handler for validateaddress JSON-RPC command to
      have parity with the bitcoind 0.20.0 interface (#1613)
    - Add rpcclient method to invoke getblockfilter JSON-RPC command
      (#1579)
    - Add signmessagewithprivkey JSON-RPC command in rpcserver (#1585)
    - Add rpcclient method to invoke importmulti JSON-RPC command (#1579)
    - Add watchOnly argument in rpcclient method to invoke
      listtransactions JSON-RPC command (#1628)
    - Update btcjson.ListTransactionsResult for compatibility with Bitcoin
      Core 0.20.0 (#1626)