@@ -3,6 +3,10 @@ User visible changes for btcd
   A full-node bitcoin implementation written in Go
 ============================================================================
 
+Changes in next version (TBD)
+  - Notable developer-related package changes:
+    - Remove the `MaxDataCarrierSize` limit for `OP_RETURN` transactions in the `txscript` package.
+
 Changes in 0.22.0 (Tue Jun 01 2021)
   - Protocol and network-related changes:
     - Add support for witness tx and block in notfound msg (#1625)
